--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: "Poppins", sans-serif;
+    font-family: "Itim", cursive;
 }
 
 /* Common */
@@ -162,6 +162,7 @@ a {
 .taste{
     padding: 50px 0;
 }
+.blog__heading,
 .product__heading,
 .taste__heading{
     color: #000336;
@@ -224,8 +225,13 @@ a {
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
 }
-.product__item:hover .product__img{
-    transform: scale(1.1); /* Zoom ảnh lên 1.1 lần */
+.product__frame{
+    overflow: hidden;
+    border-radius: inherit;
+    cursor: pointer;
+}
+.product__frame:hover .product__img{
+    transform: scale(1.2); /* Zoom ảnh lên 1.1 lần */
 }
 .product__img{
     overflow: hidden;
@@ -240,6 +246,81 @@ a {
     margin-top: 20px;
     font-size: 2rem;
 }
+.product__buy-block{
+    margin: 70px 0 0 30px ;
+    gap: 30px;
+    display: flex;
+    align-items: center;
+}
 .product__btn{
-    
+    position: relative; 
+    overflow: hidden;
+    border-radius:30px;
+}
+.cart-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%; /* Đặt biểu tượng ở giữa */
+    transform: translateX(-50%); /* Giúp biểu tượng căn giữa */
+    opacity: 0; /* Ẩn biểu tượng ban đầu */
+    transition: opacity 0.3s ease, transform 0.3s ease; /* Hiệu ứng chuyển động */
+    font-size: 1.6rem; 
+}
+.product__btn:hover .cart-icon {
+    opacity: 1; /* Hiện biểu tượng khi hover */
+    transform: translate(-50%, -50%) scale(1.5);
+    z-index: 1;
+}
+
+.product__btn:hover .btn-text {
+    color: transparent; /* Ẩn chữ "Mua hàng" khi hover */
+
+}
+.product__view{
+    margin-top: 50px;
+    text-align: center;
+}
+.product__view-desc{
+    color:#fff;
+    padding: 15px;
+    background: var(--primary-color);
+    border-radius: 999px;
+    box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
+}
+
+.blog__heading{
+    margin-bottom: 60px;
+}
+.blog__list{
+    display: flex;
+    gap: 25px;
+}
+.blog__img{
+    width: 350px;
+    height: 210px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.blog__name{
+    margin: 15px 0 ;
+    display: block;
+    width: 350px;
+    font-size: 1.9rem;
+}
+.blog__desc{
+    width: 350px;
+    margin-bottom: 10px;
+}
+.blog{
+    padding: 50px 0;
+}
+.blog__desc{
+    display: flex;
+    gap: 10px;
+}
+.blog__desc-img{
+    width: 50%;
+    object-fit: cover;
+    border-radius: 10px;
+
 }
