--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -294,6 +294,7 @@ a {
 .blog__list{
     display: flex;
     gap: 25px;
+    margin-bottom: 70px;
 }
 .blog__img{
     width: 350px;
@@ -312,7 +313,7 @@ a {
     margin-bottom: 10px;
 }
 .blog{
-    padding: 50px 0;
+    padding: 50px 0 70px 0;
 }
 .blog__desc{
     display: flex;
@@ -323,4 +324,47 @@ a {
     object-fit: cover;
     border-radius: 10px;
 
+}
+.blog__cta{
+    text-align: center;
+}
+.footer{
+    background-image: url(../img/footer-bg.jpg);
+    background-position: top;
+}
+.footer__inner{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px 0;
+}
+.footer__heading,
+.footer__copany{
+    color: #000336;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.footer__map{
+    width: 300px;
+    height: 200px;
+}
+.footer__item{
+    width: 300px;
+}
+.footer__copy{
+    position: relative;
+    width: 100%;
+    color: #363131;
+}
+.footer__copy::after{
+    position: absolute;
+    top: -5px;
+    z-index: 5;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #cdcdcd;
+    display: block;
+}
+.footer__cpr{
+    text-align: center;
 }
